--- a/CosmicBreakout/GamePage.xaml
+++ b/CosmicBreakout/GamePage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="CosmicBreakout.MainPage"
+    x:Class="CosmicBreakout.GamePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:CosmicBreakout"
@@ -8,7 +8,6 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Button x:Name="StartGame" Content="Button" HorizontalAlignment="Left" Margin="632,536,0,0" VerticalAlignment="Top" Height="172" Width="477" Click="StartGame_Click"/>
 
     </Grid>
 </Page>
