--- a/CosmicBreakout/MainPage.xaml
+++ b/CosmicBreakout/MainPage.xaml
@@ -11,6 +11,7 @@
         <Image HorizontalAlignment="Left" Height="540" VerticalAlignment="Top" Width="960" Source="Images/Background.png"/>
         <Button x:Name="StartGame" Content="Start Game" HorizontalAlignment="Left" Margin="503,396,0,0" VerticalAlignment="Top" Height="74" Width="167" Click="StartGame_Click" Foreground="White" Background="#33B4B4B4" BorderBrush="#FFDC7E0C"/>
         <Image HorizontalAlignment="Left" Margin="44,36,0,0" VerticalAlignment="Top" Source="Images/Logo.png" Height="263" Width="877"/>
+        <Button x:Name="GamePadTest" Content="GamePad Test" HorizontalAlignment="Left" Margin="754,396,0,0" VerticalAlignment="Top" Height="74" Width="167" Foreground="White" Background="#33B4B4B4" BorderBrush="#FFDC7E0C" Click="GamePadTest_Click"/>
 
     </Grid>
 </Page>
