--- a/CosmicBreakout/HighScores.xaml
+++ b/CosmicBreakout/HighScores.xaml
@@ -5,10 +5,10 @@
     xmlns:local="using:CosmicBreakout"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d" Width="1920" Height="1080">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Image HorizontalAlignment="Left" Height="540" VerticalAlignment="Top" Width="960" Source="Images/Background.png"/>
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Width="1920" Height="1080">
+        <Image HorizontalAlignment="Left" Height="1080" VerticalAlignment="Top" Width="1919" Source="Images/Background.png"/>
         <ListView Name="high_scores" Margin="10,-9.938,302.5,9.938" RenderTransformOrigin="0.5,0.5" UseLayoutRounding="False" d:LayoutRounding="Auto">
             <ListView.RenderTransform>
                 <CompositeTransform SkewY="0.672" TranslateY="3.738"/>
@@ -26,7 +26,7 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <Button x:Name="BackToMain" Content="Main Page" HorizontalAlignment="Left" Margin="754,396,0,0" VerticalAlignment="Top" Height="73" Width="167" Foreground="White" Background="#33B4B4B4" BorderBrush="#FFDC7E0C" Click="MainPage_Click"/>
+        <Button x:Name="BackToMain" Content="Main Page" HorizontalAlignment="Left" Margin="1604,884,0,0" VerticalAlignment="Top" Height="74" Width="167" Foreground="White" Background="#33B4B4B4" BorderBrush="#FFDC7E0C" Click="MainPage_Click"/>
     </Grid>
 
 
