--- a/CosmicBreakout/MainPage.xaml
+++ b/CosmicBreakout/MainPage.xaml
@@ -1,17 +1,33 @@
 ﻿<Page
-    x:Class="CosmicBreakout.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:CosmicBreakout"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d" Width="960" Height="540"
+    xmlns:Xaml="using:Microsoft.Graphics.Canvas.UI.Xaml"
+    x:Class="CosmicBreakout.MainPage"
+    mc:Ignorable="d" Width="1920" Height="1080"
     RequestedTheme="Dark">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Width="960" Height="540">
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Width="960" Height="540" HorizontalAlignment="Left" VerticalAlignment="Top">
         <Image HorizontalAlignment="Left" Height="540" VerticalAlignment="Top" Width="960" Source="Images/Background.png"/>
         <Image HorizontalAlignment="Left" Margin="44,36,0,0" VerticalAlignment="Top" Source="Images/Logo.png" Height="263" Width="877"/>
-        <Button x:Name="StartGame" Content="Start Game" HorizontalAlignment="Left" Margin="503,396,0,0" VerticalAlignment="Top" Height="74" Width="167" Click="StartGame_Click" Foreground="White" Background="#33B4B4B4" BorderBrush="#FFDC7E0C"/>
-       <Button x:Name="HighScores" Content="High Scores" HorizontalAlignment="Left" Margin="242,396,0,0" VerticalAlignment="Top" Height="74" Width="167" Click="HighScores_Click" Foreground="White" Background="#33B4B4B4" BorderBrush="#FFDC7E0C"/>
+        <TextBlock Margin="10,510,10,0" TextWrapping="Wrap" Text="PRESS ANY BUTTON TO BEGIN" VerticalAlignment="Top" Foreground="#FF818181" TextAlignment="Center"/>
+        <Xaml:CanvasAnimatedControl x:Name="GamePadInput" Width="100" Height="100" IsFixedTimeStep="True" Margin="965,0,-105,440" Update="GamePadInput_Update"/>
+        <Image HorizontalAlignment="Left" Height="16" Margin="126,362,0,0" VerticalAlignment="Top" Width="48" Stretch="None" Source="Images/BlockSingle.png"/>
+        <Image HorizontalAlignment="Left" Height="16" Margin="126,392,0,0" VerticalAlignment="Top" Width="48" Stretch="None" Source="Images/BlockDouble.png"/>
+        <Image HorizontalAlignment="Left" Height="16" Margin="126,422,0,0" VerticalAlignment="Top" Width="48" Stretch="None" Source="Images/BlockTriple.png"/>
+        <TextBlock HorizontalAlignment="Left" Margin="179,360,0,0" TextWrapping="Wrap" Text="1 Hit to Destroy" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Left" Margin="179,390,0,0" TextWrapping="Wrap" Text="2 Hits to Destroy" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Left" Margin="179,420,0,0" TextWrapping="Wrap" Text="3 Hits to Destroy" VerticalAlignment="Top"/>
+        <Image HorizontalAlignment="Left" Height="16" Margin="349,362,0,0" VerticalAlignment="Top" Width="48" Stretch="None" Source="Images/PowerupWidePaddle.png"/>
+        <Image HorizontalAlignment="Left" Height="16" Margin="349,392,0,0" VerticalAlignment="Top" Width="48" Stretch="None" Source="Images/PowerupStackPaddle.png"/>
+        <Image HorizontalAlignment="Left" Height="16" Margin="349,422,0,0" VerticalAlignment="Top" Width="48" Stretch="None" Source="Images/PowerupMultiBall.png"/>
+        <TextBlock HorizontalAlignment="Left" Margin="402,360,0,0" TextWrapping="Wrap" Text="Wide Paddle" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Left" Margin="402,390,0,0" TextWrapping="Wrap" Text="Stack Paddle" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Left" Margin="402,420,0,0" TextWrapping="Wrap" Text="Multi-Ball" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Left" Margin="126,331,0,0" TextWrapping="Wrap" Text="H E L P" VerticalAlignment="Top" FontWeight="Bold" FontSize="18"/>
+        <TextBlock HorizontalAlignment="Left" Margin="606,387,0,0" TextWrapping="Wrap" Text="Marc King, Rodney Lewis, Spencer Harrison, Holly Miller" VerticalAlignment="Top" FontSize="18" Width="252"/>
+        <TextBlock HorizontalAlignment="Left" Margin="606,353,0,0" TextWrapping="Wrap" Text="CIS297 - Winter 2017" VerticalAlignment="Top" FontSize="18" Width="252"/>
     </Grid>
 </Page>
